<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="serie">Serie:</string>
    <string name="nombre_usuario">Mario Aguilar</string>
    <string name="title_mi_cuenta">Mi Cuenta</string>
    <string name="title_mis_datos">Mis Datos</string>
    <string name="title_info_bancaria">Información Bancaria</string>
    <string name="verificar">Verificar</string>
    <string name="generic_error">Error</string>
    <string name="database_access_error">Error al acceder a la base de datos</string>
    <string name="title_splash">Acepta Todo\n Tipo de Pagos!</string>
    <string name="title_splash2">Paga tus Recibos\n a Tiempo y sin Recargos</string>
    <string name="title_inicio">Sin Renta\n Mensual</string>
    <string name="title_inicio2">¡No Volverás a\n Pagar Recargos!</string>
    <string name="subtitle_inicio">Tu Nueva Asistente Virtual\n te Recordará Todos tus Pagos</string>
    <string name="title_promociones">Promociones</string>
    <string name="title_promociones_detalle">Detalle de Promoción</string>
    <string name="title_mensajes_detalle">Detalle de Mensajes</string>
    <string name="firestore_cupones">"notification/%1$s/%2$s/%3$s/Cupones"</string>
    <string name="firestore_inbox">"notification/%1$s/%2$s/%3$s/Mensajes"</string>
    <string name="validez_cupones">Válido hasta el</string>
    <string name="serie_title_cupones">El Número de Serie es:\n\n</string>
    <string name="title_legal_mensajes">Legales:</string>
    <string name="body_legal_mensajes">Ya Ganaste no se Hace Responsable por los Mensajes Aquí Recibidos ni el Contenido de Ellos.</string>
    <string name="saltar_intro"><u>Saltar Intro</u></string>
    <string name="continuar">Continuar</string>
    <string name="validate_code">Validar Código</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>
    <string name="mensaje_slide1">Con Ya Ganaste Cobra desde\n Cualquier Lugar con tu\n Propio Lector MPos</string>
    <string name="mensaje_slide2">Es Fácil, Rápido\n y Seguro</string>
    <string name="mensaje_slide3">Lo Mejor\n sin Renta ni Plazos Forzosos</string>
    <string name="bienvenida">¡Bienvenido a Ya Ganaste! \n Desde Ahora:</string>
    <string name="bienvenida_inicio">Bienvenido a\nTu Nueva Vida…\nYa Ganaste</string>
    <string name="bienvenida_inicio_sesion">Ya Tengo una Cuenta</string>
    <string name="bienvenida_inicio_registrate">Inicia tu Registro</string>
    <string name="bienvenido_login">Bienvenido</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="sin_correo">Debes Escribir Un Correo Electrónico</string>
    <string name="contrasena_usuario_incorrecta">La Clave de Usuario es Incorrecta</string>
    <string name="olvido_contraseña">¿Olvidaste tu Contraseña?</string>
    <string name="message_confirmacion_cambio_contrasena_titulo">Recuperar Contraseña</string>
    <string name="message_confirmacion_cambio_contrasena">Te Enviaremos las Instrucciones a tu Correo Electrónico para Recuperar Contraseña</string>
    <string name="message_envio_correo">Hemos Enviado un Correo con las Instrucciones para Recuperar tu Contraseña</string>
    <string name="message_confirmacion_cambio_contrasena_warning">* No Podrás Salir de la Aplicación Hasta Haber Concluido el Proceso. </string>
    <string name="menu_title_ajustes_seguridad">Ajustes de Seguridad</string>
    <string name="menu_ajustes_opcion_contraseña">Cambiar Contraseña</string>
    <string name="menu_ajustes_opcion_recuperar_contrasena">Recuperar Contraseña</string>
    <string name="menu_ajustes_opcion_huella">Huella Digital</string>
    <string name="menu_ajustes_opcion_saldos">Mostrar Saldos</string>
    <string name="menu_ajustes_sub_huella">Autorizar Inicio de Sesión con Biométricos</string>
    <string name="menu_title_ajustes_cambio_contraseña">Cambio de Contraseña</string>
    <string name="codigo_recibido">Código</string>
    <string name="codigo_recibido_foot">* Ingresa el Código de Verificación que te fue Enviado</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="conf_nueva_contrase_a">Confirmar Contraseña</string>
    <string name="message_cambio_contrasena_success_body">La Contraseña ha Sido Actualizada.\nInicie Sesión Nuevamente.</string>
    <string name="text1_bienvenida4L">Recibe Pagos con Tarjeta de \nCrédito y Débito</string>
    <string name="text2_bienvenida4L">Paga y Cobra Desde tu Celular\ncon QR y Olvídate del Efectivo</string>
    <string name="text3_bienvenida4L">Paga tus Servicios\ny Realiza Recargas</string>
    <string name="text4_bienvenida4L">Recibe Atractivas Promociones\nde las Mejores Marcas</string>
    <string name="text5_bienvenida4L">Envía Dinero a Familiares\ny Amigos </string>
    <string name="text6_bienvenida4L">Consulta Tus Movimientos</string>
    <string name="text7_bienvenida4L">Ofrece a tus Clientes Pago \nde Servicios y Recargas</string>
    <string name="titulo_condiciones">Ganan Más con Nuestros \nProductos Digitales</string>
    <string name="subtitulo1_condiciones">Pago de Servicios</string>
    <string name="contenido1_condiciones">El 85% de los Clientes que Pagan un Servicio, \nse Llevará Algo Más. (Puede Aplicar una \nComisión al Cliente)</string>
    <string name="subtitulo2_condiciones">Recargas Electronicas</string>
    <string name="contenido2_condiciones">Ofrece y Vende el Producto Más Exitoso</string>
    <string name="subtitulo3_condiciones">Paquetes de Datos y Pines</string>
    <string name="contenido3_condiciones">Genera Valor Agregado Para tus Clientes</string>
    <string name="btn_ontinuar_despues">Continuar Después</string>
    <string name="title_nombre_negocio_giro_empty">Datos Faltantes</string>
    <string name="msg_nombre_negocio_giro_empty">Selecciona un Giro Comercial</string>
    <string name="text_upgrade_felicidades">¡Felicidades!</string>
    <string name="text_parrafo_upgrade_profesionista">A partir de Este Momento ya Puedes Aceptar Pagos con Tarjetas de Crédito y Débito</string>
    <string name="title_pago_seguro">Pago Seguro y Confiable</string>
    <string name="text_cert_pci">Contamos con la Certificación PCI. Lo que Garantiza el más Alto Nivel de Protección de sus Datos al Realizar Pagos</string>
    <string name="text_protocolo_tls">Las Transacciones Realizadas por Ya Ganaste son Seguras y se Realizan con el Protocolo TLS</string>
    <string name="text_parrafo_upgrade_merchant">Ya Puedes Ganar Atractivas Comisiones al Ofrecer a tus Clientes Pago de Servicios y Recargas Electrónicas</string>
    <string name="tile_upgrade_premium">Convierte tu Negocio en un Centro de Pagos Electrónicos</string>
    <string name="text_upgrade_premium">Conviértete en Premium y Obtén Más</string>
    <string name="text_column_basic">Básico</string>
    <string name="text_column_premium">Premium</string>
    <string name="text_row_1">Sin Costo Mensual por Lector MPos</string>
    <string name="text_row_2">Cobra y Paga con QR</string>
    <string name="text_row_3">Recibe Cualquier Tipo de Tarjeta"</string>
    <string name="text_row_4">Premios por Metas</string>
    <string name="text_row_5">"Recibe Comisiones por Pago de Servicios y Recargas</string>
    <string name="text_butn_upgrade_merchant">Quiero Premium</string>
    <string name="txt_codigo">Código Cliente FullCarga</string>
    <string name="completa_el_formulario">  Completa el Formulario y te Enviaremos el Código de Activación de tu Terminal Android.</string>
    <string name="soy_cliente">Soy Cliente</string>
    <string name="codigo_cliente">Código Cliente FullCarga</string>
    <string name="rellena_cliente">Rellena Si ya Eres Cliente FullCarga</string>
    <string name="txt_tipo_documento">Tipo Documento Identificación *</string>
    <string name="personal">Personal</string>
    <string name="empresa">Empresa</string>
    <string name="documento">* Documento</string>
    <string name="registrar">Registrar</string>
    <string name="direccion">* Dirección </string>
    <string name="otra_localidad">Otra Localidad</string>
    <string name="celular">* Celular</string>
    <string name="telefono_alternativo">Teléfono Alternativo</string>
    <string name="correo_electr_nico">* Correo Electrónico</string>
    <string name="correo_electr_nico_recuperar">eje***@yaganaste.com</string>
    <string name="comentarios">Comentarios</string>
    <string name="reg_nombre">* Nombre</string>
    <string name="apellido_1">* Primer Apellido</string>
    <string name="segundo_apellido">* Segundo Apellido</string>
    <string name="longitud_incorrecta">El Texto Debe ser de %1$s Caracteres</string>
    <string name="num_documento">Número Documento Identificación *</string>
    <string name="btnActualizarProductos">Cancelar</string>
    <string name="programar">Programar</string>
    <string name="No">No</string>
    <string name="clave_usuario_hint">Clave Usuario</string>
    <string name="recuperar_clave">Recuperar Contraseña</string>
    <string name="recuperar_clave_enviar">Te Enviaremos las Instrucciones a tu Correo \n Electrónico para Recuperar Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="confirmar">Confirmar</string>
    <string name="no_por_ahora">No por Ahora</string>
    <string name="SI">Si</string>
    <string name="region">Región</string>
    <string name="siguiente">Siguiente</string>
    <string name="no_serie">Número de Serie</string>
    <string name="no_serie_prefijo">Prefijo</string>
    <string name="error">Error al Realizar la Operación </string>
    <string name="error_conexion">Error de Conexión</string>
    <string name="error_conexion_dongle">Error al Conectar el Lector MPos</string>
    <string name="error_intente_mas_tarde">Ocurrió un Error, Intente de Nuevo</string>
    <string name="cargando">Cargando</string>
    <string name="configurando_dispositivo">Un momento. Estamos Configurando tu Lector MPos por Primera vez…</string>
    <string name="exito">Éxito</string>
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="registro_fallido">Registro Fallido, Inténte de Nuevo</string>
    <string name="registro_dialog_cargando_error">Error</string>
    <string name="registro_dialog_cargando_error_internet">Error de Conexión</string>
    <string name="error_conexion_bd">Ocurrió un Error con la Base de Datos, Intente de Nuevo</string>
    <string name="registro_dialog_cargando_niveles">Cargando niveles</string>
    <string name="registro_dialog_cargando_estados">Cargando %1$s</string>
    <string name="registro_dialog_cargando_municipios">Cargando %1$s</string>
    <string name="registro_cb_t_c_aviso">Acepto los Términos y Condiciones y el Aviso de Privacidad</string>
    <string name="repite_clave_usuario">Repite Clave Usuario</string>
    <string name="menu_item_ayuda">Ayuda</string>
    <string name="gen_desc">Descripción Genérica</string>
    <string name="menu_item_cierre_turno">Cierre de Turno</string>
    <string name="menu_item_cierre_sesion">Cerrar Sesión</string>
    <string name="menu_item_actualizar_productos">Actualizar Productos</string>
    <string name="menu_item_contactanos">Contáctanos</string>
    <string name="menu_item_conexion">Conexión</string>
    <string name="menu_inactividad">Bloqueo Automático</string>
    <string name="menu_item_consultar_saldo">Consultar Saldo</string>
    <string name="menu_item_reporte_ventas">Reporte de Ventas</string>
    <string name="titulo_autoriza">Autoriza</string>
    <string name="accion_password">Ingresa tu Contraseña Para \n Autorizar la Operación</string>
    <string name="titulo_cambio_contraseña">Cambio Contraseña</string>
    <string name="contrasena">Contraseña (Numérica 6 Dígitos)</string>
    <string name="cambio_contraseña">Por Motivos de Seguridad Debe Cambiar su Contraseña</string>
    <string name="en_otro_momento">En Otro Momento</string>
</resources>