<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_passwordCtn"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="?attr/blueDark"
        android:textSize="26sp"
        android:text="@string/titulo_autoriza"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_password"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <com.pagatodoholdings.posandroid.componentesvista.controlespersonalizados.EditTextDatosUsuarios
        android:id="@+id/et_contrase_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:foreground="@android:color/transparent"
        android:inputType="numberPassword"
        android:maxLength="6"
        app:hint="@string/contrasena"
        app:iscontrasena="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewFooterCodigoRecibido"/>

</LinearLayout>