<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".secciones.registro.registro4l.RegistroAgregaCuentaActivity">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tile_upgrade_premium"
            android:textSize="24sp"
            android:textColor="@color/colorSaldoAzul"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textViewSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:text="@string/text_upgrade_premium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitulo" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSubtitulo">

            <TableRow>
                <TextView
                    android:layout_weight="0.5"
                    android:layout_width="0dp"/>

                <TextView
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:text="@string/text_column_basic"/>

                <TextView
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/text_column_premium"/>
            </TableRow>

            <TableRow
                android:gravity="center">
                <TextView
                    android:layout_column="0"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:text="@string/text_row_1"
                    android:padding="4dp"/>
                <ImageView
                    android:layout_column="1"
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>

                <ImageView

                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="18dp"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="#72757575"/>

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:text="@string/text_row_2"
                    android:padding="4dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="#72757575"/>

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:text="@string/text_row_3"
                    android:padding="4dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="#72757575"/>

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:text="@string/text_row_4"
                    android:padding="4dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
            </TableRow>

            <View
                android:layout_height="1dp"
                android:background="#72757575"/>

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:text="@string/text_row_5"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.25"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:src="@drawable/icono_exitoso"/>
            </TableRow>

        </TableLayout>

        <CheckBox
            android:id="@+id/checkBoxCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/registro_cb_t_c_aviso"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintBottom_toTopOf="@id/textViewOtroMomento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewOtroMomento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_otro_momento"
            android:textColor="@color/colorSaldoAzul"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@id/botonUnicoContinuar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.pagatodoholdings.posandroid.componentesvista.controlespersonalizados.BotonClickUnico
            android:id="@+id/botonUnicoContinuar"
            style="@style/ButtonContinueStyle"
            android:text="@string/text_butn_upgrade_merchant"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
