<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.pagatodoholdings.posandroid.secciones.inicio.CondicionesComercialesFragment">

        <ImageView
            android:id="@+id/imageViewAna"
            android:layout_width="186dp"
            android:layout_height="171dp"
            android:src="@drawable/ilustracion_seguro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPagoSeguro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pago_seguro"
            android:textSize="26sp"
            android:textColor="@color/colorSaldoAzul"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewAna"/>

        <TextView
            android:id="@+id/textViewDescripcion1"
            android:layout_width="333dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/text_cert_pci"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPagoSeguro" />

        <TextView
            android:id="@+id/textViewDescripcion2"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/text_protocolo_tls"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescripcion1" />

        <com.pagatodoholdings.posandroid.componentesvista.controlespersonalizados.BotonClickUnico
            android:id="@+id/botonUnicoContinuar"
            style="@style/ButtonContinueStyle"
            android:text="@string/continuar"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
